// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should render with default styles 1`] = `
.circuit-0 {
  background-color: #FFFFFF;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  overflow: hidden;
  width: 98%;
  width: calc(100% - 16px);
  box-shadow: 0 0 0 1px rgba(12,15,20,0.02), 0 0 1px 0 rgba(12,15,20,0.06), 0 2px 2px 0 rgba(12,15,20,0.06);
  padding: 16px 24px;
}

@media (min-width:480px) {
  .circuit-0 {
    width: auto;
  }
}

<div
  className="circuit-0 circuit-1"
  spacing="giga"
/>
`;

exports[`Card should render with shadow styles 1`] = `
.circuit-0 {
  background-color: #FFFFFF;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  overflow: hidden;
  width: 98%;
  width: calc(100% - 16px);
  box-shadow: 0 0 0 1px rgba(12,15,20,0.02), 0 0 1px 0 rgba(12,15,20,0.06), 0 2px 2px 0 rgba(12,15,20,0.06);
  padding: 16px 24px;
}

@media (min-width:480px) {
  .circuit-0 {
    width: auto;
  }
}

<div
  className="circuit-0 circuit-1"
  spacing="giga"
/>
`;

exports[`Card should render with shadow styles 2`] = `
.circuit-0 {
  background-color: #FFFFFF;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  overflow: hidden;
  width: 98%;
  width: calc(100% - 16px);
  box-shadow: 0 0 0 1px rgba(12,15,20,0.02), 0 2px 2px 0 rgba(12,15,20,0.06), 0 4px 4px 0 rgba(12,15,20,0.06);
  padding: 16px 24px;
}

@media (min-width:480px) {
  .circuit-0 {
    width: auto;
  }
}

<div
  className="circuit-0 circuit-1"
  spacing="giga"
/>
`;

exports[`Card should render with shadow styles 3`] = `
.circuit-0 {
  background-color: #FFFFFF;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  overflow: hidden;
  width: 98%;
  width: calc(100% - 16px);
  box-shadow: 0 0 0 1px rgba(12,15,20,0.02), 0 4px 4px 0 rgba(12,15,20,0.06), 0 8px 8px 0 rgba(12,15,20,0.06);
  padding: 16px 24px;
}

@media (min-width:480px) {
  .circuit-0 {
    width: auto;
  }
}

<div
  className="circuit-0 circuit-1"
  spacing="giga"
/>
`;

exports[`Card should render with spacing styles 1`] = `
.circuit-0 {
  background-color: #FFFFFF;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  overflow: hidden;
  width: 98%;
  width: calc(100% - 16px);
  box-shadow: 0 0 0 1px rgba(12,15,20,0.02), 0 0 1px 0 rgba(12,15,20,0.06), 0 2px 2px 0 rgba(12,15,20,0.06);
  padding: 16px 16px;
}

@media (min-width:480px) {
  .circuit-0 {
    width: auto;
  }
}

<div
  className="circuit-0 circuit-1"
  spacing="mega"
/>
`;

exports[`Card should render with spacing styles 2`] = `
.circuit-0 {
  background-color: #FFFFFF;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  overflow: hidden;
  width: 98%;
  width: calc(100% - 16px);
  box-shadow: 0 0 0 1px rgba(12,15,20,0.02), 0 0 1px 0 rgba(12,15,20,0.06), 0 2px 2px 0 rgba(12,15,20,0.06);
  padding: 16px 24px;
}

@media (min-width:480px) {
  .circuit-0 {
    width: auto;
  }
}

<div
  className="circuit-0 circuit-1"
  spacing="giga"
/>
`;
